Fix clearfix <div class="content group"> collapses unless its :after element has display:block

--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,9 @@
 
 .group:after{
   clear: both;
-  content: "";
-  display: none;
+  content: " ";
+  display: block;
+  height: 0;
 }
 
 html, body, section, form, ul,
